--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-	    <script type="text/javascript">block_aplayer = true;</script>
+	    <script type="text/javascript">block_aplayer = true;lang = ['en', 'zh'];</script>
 	    <script src="https://cdn.yimian.xyz/ushio-js/ushio-head.min.js"></script>
-	    <script type="text/javascript">page.auth = ['nickname']</script>
+	    <script type="text/javascript">page.auth = ['nickname']; page.proj = 'iotcat/ushio-user';</script>
 	</head>
 	<body class="is-preload">
 
 		<!-- Header -->
 			<header id="header">
-				<h1 id="nickname">Loading...</h1>
-				<p><strong>Uid: </strong><span id="uid"></span></p>
-				<p><strong>Email: </strong><span id="email"></span></p>
-				<p><strong>Tel: </strong><span id="tel"></span></p>
-				<p><strong>Group: </strong><span id="group"></span></p>
+				<h1 id="nickname"><span class=".zh">加载中..</span><span class=".en">Loading...</span></h1>
+				<p><strong><span class=".zh">账户id</span><span class=".en">Uid</span>: </strong><span id="uid"></span></p>
+				<p><strong><span class=".zh">邮箱</span><span class=".en">Email</span>: </strong><span id="email"></span></p>
+				<p><strong><span class=".zh">手机号</span><span class=".en">Tel</span>: </strong><span id="tel"></span></p>
+				<p><strong><span class=".zh">分组</span><span class=".en">Group</span>: </strong><span id="group"></span></p>
 			</header>
 
 
