--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<!-- Signup Form -->
 			<form id="signup-form" method="post" action="#">
 		
-				<button id="update" style="display: none">Update</button> <button id="logout" style="display: none" onClick="window.location.href='https://login.yimian.xyz/logout.html'">Logout</button>
+				<button id="update" style="display: none"><span class=".zh">更新信息</span><span class=".en">Update</span></button> <button id="logout" style="display: none" onClick="window.location.href='https://login.yimian.xyz/logout.html'"><span class=".zh">退出登录</span><span class=".en">Logout</span></button>
 			</form>
 
 
