--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>Ushio User</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="https://cdn.yimian.xyz/ushio-user/assets/css/main.css" />
 	    <script type="text/javascript">block_aplayer = true;lang = ['en', 'zh'];</script>
 	    <script src="https://cdn.yimian.xyz/ushio-js/ushio-head.min.js"></script>
 	    <script type="text/javascript">page.auth = ['nickname']; page.proj = 'iotcat/ushio-user';</script>
@@ -46,7 +46,7 @@
 			</footer>
 
 		<!-- Scripts -->
-			<script src="assets/js/main.js"></script>
+			<script src="https://cdn.yimian.xyz/ushio-user/assets/js/main.js"></script>
 			<script type="text/javascript" src="https://cdn.yimian.xyz/ushio-js/ushio-footer.min.js"></script>
 			<script type="text/javascript">
 			session.onload(function(){
