--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     $('#devices').html(devicess);
                     events.forEach(i=>f(i));
                 });
-			});
+			}, false, true);
 
 
           $("#update").click(function(){
