--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			<footer id="footer">
 
 				<ul class="copyright">
-					<li>&copy; 2018-<script type="text/javascript">document.write(new Date().getFullYear())</script> <a href="https://iotcat.me">iotcat</a></li><li>Powered by <a href="https://ushio.cool">Ushio</a></li><li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; 2018-<script type="text/javascript">document.write(new Date().getFullYear())</script> <a href="https://iotcat.me">iotcat</a></li><li>Powered by <a href="https://ushio.yimian.xyz">Ushio</a></li><li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</footer>
 
